<resources>
    <string name="app_name">Schedule</string>
    <!-- Text Info Start -->
    <string name="text_value_message_welcome">Welcome %1$s</string>
    <string name="text_value_message_error_default">Uf!. A unknown error occurred in the process, try again.</string>
    <string name="text_value_offline_access_warning">Offline access. Changes made will not be saved correctly.</string>
    <string name="text_value_permission">You have not grated the necessary permission to access the device data.</string>
    <string name="text_value_permissions_group">You have not grated the necessary permissions to access the device data.</string>
    <string name="text_value_permission_explanation">You need a permission to continue.</string>
    <string name="text_value_permissions_group_explanation">It is necessary to accredit all permits to continue.</string>
    <!-- Text Info End -->
    <!-- Text Splash Screen Start -->
    <string name="splash_screen_subtitle">Screen Sub Title</string>
    <!-- Text Splash Screen End -->
    <!-- Text Intro Screen Start -->
    <!-- Text Intro Screen End -->
    <!-- Text MainActivity Start -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_account">Account</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Homepage</string>
    <string name="menu_electronic">Electronic</string>
    <string name="menu_meeting">Meeting</string>
    <string name="menu_personal">Personal</string>
    <string name="menu_personal_activities">Personal development</string>
    <string name="menu_personal_diary">Personal diary</string>
    <string name="menu_sub_header_title">Preferences</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_help_feedback">Help and Feedback</string>
    <string name="menu_open_source">Open Source</string>
    <string name="menu_share">Share</string>
    <string name="menu_footer_title">Extra</string>
    <string name="menu_privacy">Privacy policies</string>
    <string name="menu_terms_services">Conditions of services</string>
    <string name="menu_about">About Schedule</string>
    <!-- Text MainActivity End -->
</resources>