<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.development.hybrid.schedule.views.main.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_electronic"
        android:name="com.development.hybrid.schedule.views.main.ui.electronic.ElectronicFragment"
        android:label="@string/menu_electronic"
        tools:layout="@layout/fragment_electronic" />

    <fragment
        android:id="@+id/nav_meeting"
        android:name="com.development.hybrid.schedule.views.main.ui.meeting.MeetingFragment"
        android:label="@string/menu_meeting"
        tools:layout="@layout/fragment_meeting" />
</navigation>